@@ -1,7 +1,7 @@
 package com.aegisguard.commands;
 
 import com.aegisguard.AegisGuard;
-import com.aegisguard.claimblocks.ClaimBlockManager; // ✅ NEW IMPORT
+import com.aegisguard.claimblocks.ClaimBlockManager;
 import com.aegisguard.data.Plot;
 import com.aegisguard.selection.SelectionService;
 import com.aegisguard.util.TeleportUtil;
@@ -25,19 +25,13 @@ import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.util.StringUtil;
 
 import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class AegisCommand implements CommandExecutor, TabCompleter {
 
     private final AegisGuard plugin;
 
-    // Command List for Tab Completion
     private static final String[] SUB_COMMANDS = {
             "wand", "menu", "claim", "unclaim", "resize", "help",
             "setspawn", "home", "welcome", "farewell",
@@ -45,7 +39,7 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
             "kick", "ban", "unban", "visit",
             "level", "zone", "like",
             "rename", "stuck", "setdesc", "merge",
-            "consume", "ledger", "blocks" // ✅ Added blocks for tab completion
+            "consume", "ledger", "blocks"
     };
 
     private static final String[] RESIZE_DIRECTIONS = {"north", "south", "east", "west"};
@@ -55,41 +49,70 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
     }
 
     // --------------------------------------------------
-    // LANGUAGE (Codex helpers)
+    // LANGUAGE (Codex helpers) - FIXED
     // --------------------------------------------------
 
-    private String tr(Player player, String key, String fallback) {
-        try {
-            if (plugin.codex() != null) {
-                String value = plugin.codex().tr(player, key);
-                if (value != null && !value.trim().isEmpty()) {
-                    return value;
-                }
-            }
-        } catch (Throwable ignored) {
+    private String tr(CommandSender sender, String key, String fallback) {
+        return tr(sender, key, fallback, Collections.emptyMap());
+    }
+
+    private String tr(CommandSender sender, String key, String fallback, Map<String, String> placeholders) {
+        // If Codex is missing, use fallback.
+        if (plugin.codex() == null || key == null || key.isBlank()) {
+            return applyPlaceholders(fallback, placeholders);
         }
-        return fallback;
-    }
 
-    private void sendKey(Player player, String key, String fallback) {
-        String msg = tr(player, key, fallback);
-        sendMsg(player, msg);
-    }
-
-    private void sendKey(Player player, String key, String fallback, Map<String, String> placeholders) {
-        String msg = fallback;
         try {
-            if (plugin.codex() != null) {
-                msg = plugin.codex().tr(player, key, placeholders);
+            String value = plugin.codex().tr(sender, key, placeholders);
+
+            // IMPORTANT: CodexEngine returns the key if missing.
+            if (value == null || value.isBlank() || value.equalsIgnoreCase(key)) {
+                return applyPlaceholders(fallback, placeholders);
             }
-        } catch (Throwable ignored) {}
-        sendMsg(player, msg);
+
+            return value;
+        } catch (Throwable ignored) {
+            return applyPlaceholders(fallback, placeholders);
+        }
     }
+
+    private void sendKey(CommandSender sender, String key, String fallback) {
+        sendKey(sender, key, fallback, Collections.emptyMap());
+    }
+
+    private void sendKey(CommandSender sender, String key, String fallback, Map<String, String> placeholders) {
+        String msg = tr(sender, key, fallback, placeholders);
+        sendMsg(sender, msg);
+    }
+
+    private void sendMsg(CommandSender sender, String message) {
+        if (message == null || message.isEmpty()) return;
+        sender.sendMessage(ChatColor.translateAlternateColorCodes('&', message));
+    }
+
+    private String applyPlaceholders(String input, Map<String, String> placeholders) {
+        if (input == null || input.isEmpty() || placeholders == null || placeholders.isEmpty()) return input;
+
+        String out = input;
+        for (Map.Entry<String, String> e : placeholders.entrySet()) {
+            String k = e.getKey();
+            if (k == null || k.isEmpty()) continue;
+            String v = (e.getValue() == null) ? "" : e.getValue();
+            out = out.replace("{" + k + "}", v);
+        }
+        return out;
+    }
+
+    // --------------------------------------------------
+    // Command
+    // --------------------------------------------------
 
     @Override
     public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
+
         if (!(sender instanceof Player p)) {
-            sender.sendMessage(ChatColor.RED + "This command can only be used by players.");
+            // Use Codex for console too (default language).
+            sendKey(sender, "players_only", "&cError: This command can only be used by players.");
             return true;
         }
 
@@ -98,137 +121,83 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
-        switch (args[0].toLowerCase()) {
-            case "wand":
+        switch (args[0].toLowerCase(Locale.ROOT)) {
+            case "wand" -> {
                 if (SelectionService.playerHasAnyWand(p)) {
-                    sendKey(p, "wand_already_owned", "&cYou already possess an Aegis Scepter.");
+                    sendKey(p, "wand_already_on", "&eYou already have the Aegis Scepter in your inventory.");
                     plugin.effects().playError(p);
                     break;
                 }
-                p.getInventory().addItem(createScepter());
-                sendKey(p, "wand_given", "&aYou feel the power of the Aegis Scepter in your hand.");
+                p.getInventory().addItem(createScepter(p));
+                sendKey(p, "wand_given", "&a⚡ You received the Aegis Scepter.");
                 plugin.effects().playConfirm(p);
-                break;
+            }
 
-            case "menu":
-                plugin.gui().openMain(p);
-                break;
+            case "menu" -> plugin.gui().openMain(p);
 
-            // ✅ MODIFIED: Claim logic with Block Budget & Starter Limit
-            case "claim":
-                handleClaim(p);
-                break;
+            case "claim" -> handleClaim(p);
 
-            case "unclaim":
-                plugin.selection().unclaimHere(p);
-                break;
+            case "unclaim" -> plugin.selection().unclaimHere(p);
 
-            case "resize":
-                handleResize(p, args);
-                break;
+            case "resize" -> handleResize(p, args);
 
-            // --- MODERATION ---
-            case "kick":
-                handleKick(p, args);
-                break;
+            case "kick" -> handleKick(p, args);
 
-            case "ban":
-                handleBan(p, args);
-                break;
+            case "ban" -> handleBan(p, args);
 
-            case "unban":
-                handleUnban(p, args);
-                break;
+            case "unban" -> handleUnban(p, args);
 
-            // --- UTILITIES ---
-            case "visit":
+            case "visit" -> {
                 if (!plugin.cfg().isTravelSystemEnabled()) {
-                    sendMsg(p, "&cTravel system is disabled.");
+                    sendKey(p, "travel_system_disabled", "&cTravel system is disabled.");
                     return true;
                 }
                 plugin.gui().visit().open(p, 0, false);
-                break;
+            }
 
-            case "setspawn":
-                handleSetSpawn(p);
-                break;
+            case "setspawn" -> handleSetSpawn(p);
 
-            case "home":
-                handleHome(p);
-                break;
+            case "home" -> handleHome(p);
 
-            case "welcome":
-                handleWelcomeFarewell(p, args, true);
-                break;
+            case "welcome" -> handleWelcomeFarewell(p, args, true);
 
-            case "farewell":
-                handleWelcomeFarewell(p, args, false);
-                break;
+            case "farewell" -> handleWelcomeFarewell(p, args, false);
 
-            case "stuck":
-                handleStuck(p);
-                break;
+            case "stuck" -> handleStuck(p);
 
-            case "rename":
-                handleRename(p, args);
-                break;
+            case "rename" -> handleRename(p, args);
 
-            case "setdesc":
-                handleSetDesc(p, args);
-                break;
+            case "setdesc" -> handleSetDesc(p, args);
 
-            case "merge":
+            case "merge" -> {
                 if (args.length < 2) {
-                    sendMsg(p, "&cUsage: /ag merge <N/S/E/W>");
+                    sendKey(p, "usage_merge", "&cUsage: /ag merge <N/S/E/W>");
                 } else {
                     plugin.selection().attemptMerge(p, args[1]);
                 }
-                break;
+            }
 
-            // --- ECONOMY ---
-            case "market":
-                plugin.gui().market().open(p, 0);
-                break;
+            case "market" -> plugin.gui().market().open(p, 0);
 
-            case "sell":
-                handleSell(p, args);
-                break;
+            case "sell" -> handleSell(p, args);
 
-            case "unsell":
-                handleUnsell(p);
-                break;
+            case "unsell" -> handleUnsell(p);
 
-            case "auction":
-                plugin.gui().auction().open(p, 0);
-                break;
+            case "auction" -> plugin.gui().auction().open(p, 0);
 
-            // --- SHORTCUTS ---
-            case "level":
-                openLevelMenu(p);
-                break;
+            case "level" -> openLevelMenu(p);
 
-            case "zone":
-                openZoneMenu(p);
-                break;
+            case "zone" -> openZoneMenu(p);
 
-            case "like":
-                handleLike(p);
-                break;
+            case "like" -> handleLike(p);
 
-            case "consume":
-                plugin.selection().manualConsumeWand(p);
-                break;
+            case "consume" -> plugin.selection().manualConsumeWand(p);
 
-            // NEW: Quick check for players
-            case "ledger":
-            case "blocks":
-                showLedger(p);
-                break;
+            case "ledger", "blocks" -> showLedger(p);
 
-            case "help":
-            default:
-                sendHelp(p);
+            case "help", default -> sendHelp(p);
         }
+
         return true;
     }
 
@@ -238,16 +207,14 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
 
     private void handleClaim(Player p) {
         if (!plugin.selection().hasSelection(p)) {
-            sendKey(p, "must_select", "&c❌ You must select two boundary points.");
+            sendKey(p, "must_select", "&c❌ You must select two corners with the Wand first.");
             return;
         }
 
-        // ✅ NEW: If other protection plugins already own this turf, AegisGuard yields (configurable)
+        // External protection compat
         if (isSelectionProtectedElsewhere(p)) {
-            sendKey(p,
-                    "claim_conflict_external",
-                    "&c❌ That area is already protected by another plugin. AegisGuard will not claim it."
-            );
+            sendKey(p, "claim_denied_external_generic",
+                    "&c⛔ Claim denied: protected by another plugin.");
             plugin.effects().playError(p);
             return;
         }
@@ -255,15 +222,20 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
         long area = plugin.selection().getSelectionArea(p);
         if (area <= 0) return;
 
+        // If claim blocks are disabled, fall back to normal claim.
+        if (!plugin.cfg().raw().getBoolean("claim_blocks.enabled", true) || plugin.getClaimBlockManager() == null) {
+            plugin.selection().confirmClaim(p);
+            return;
+        }
+
         ClaimBlockManager blocks = plugin.getClaimBlockManager();
         UUID uuid = p.getUniqueId();
 
         if (!blocks.canAfford(uuid, area)) {
             long missing = area - blocks.getAvailableBlocks(uuid);
             sendKey(p, "claim_blocks_not_enough",
-                    "&c❌ You need &e" + missing + "&c more claim blocks to claim this area.",
-                    Map.of("NEEDED", String.valueOf(missing), "AREA", String.valueOf(area))
-            );
+                    "&c❌ You need {AMOUNT} more Claim Blocks.",
+                    Map.of("AMOUNT", String.valueOf(missing)));
             plugin.effects().playError(p);
             return;
         }
@@ -271,10 +243,9 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
         if (!blocks.getOrCreate(uuid).hasClaimedStarter() && !p.hasPermission("aegis.admin.bypass-limits")) {
             long maxStarter = plugin.cfg().raw().getLong("claim_blocks.first_claim_limit.max_area", 1000);
             if (area > maxStarter) {
-                sendKey(p, "first_claim_limit_reached",
-                        "&c❌ First claim limit exceeded! Max size: &e" + maxStarter + "&c blocks. (You selected &e" + area + "&c)",
-                        Map.of("LIMIT", String.valueOf(maxStarter), "AREA", String.valueOf(area))
-                );
+                sendKey(p, "claim_blocks_first_claim_limit",
+                        "&c❌ First claim limit: max area &6{MAX}&c.",
+                        Map.of("MAX", String.valueOf(maxStarter)));
                 plugin.effects().playError(p);
                 return;
             }
@@ -291,26 +262,18 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
         }
     }
 
-    /**
-     * Returns true if the selected area conflicts with another protection plugin,
-     * respecting overlap policy if present.
-     *
-     * Uses reflection for maximum compatibility with your current codebase.
-     */
     private boolean isSelectionProtectedElsewhere(Player p) {
         try {
             if (plugin.protectionHooks() == null) return false;
 
             Object mgr = plugin.protectionHooks();
 
-            // If manager exposes isEnabled(), respect it
             try {
                 Method isEnabled = mgr.getClass().getMethod("isEnabled");
                 Object enabled = isEnabled.invoke(mgr);
                 if (enabled instanceof Boolean b && !b) return false;
             } catch (Throwable ignored) {}
 
-            // If manager exposes getOverlapPolicy(), respect AEGIS_WINS
             try {
                 Method getPol = mgr.getClass().getMethod("getOverlapPolicy");
                 Object pol = getPol.invoke(mgr);
@@ -322,7 +285,6 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
             Location a = getSelectionCorner(p, true);
             Location b = getSelectionCorner(p, false);
 
-            // Fallback: only check player location
             if (a == null || b == null || a.getWorld() == null || b.getWorld() == null || !a.getWorld().equals(b.getWorld())) {
                 try {
                     Method isProt = mgr.getClass().getMethod("isProtectedElsewhere", Location.class);
@@ -344,7 +306,6 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
                 Object result = area.invoke(mgr, world, x1, z1, x2, z2);
                 return result instanceof Boolean bb && bb;
             } catch (Throwable ignored) {
-                // If area scan isn't available, do a simple check
                 try {
                     Method isProt = mgr.getClass().getMethod("isProtectedElsewhere", Location.class);
                     Object result = isProt.invoke(mgr, p.getLocation());
@@ -359,10 +320,6 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
         }
     }
 
-    /**
-     * Attempts to fetch selection corners from SelectionService via reflection.
-     * Supports multiple potential method names.
-     */
     private Location getSelectionCorner(Player p, boolean first) {
         Object sel = plugin.selection();
         if (sel == null) return null;
@@ -391,259 +348,326 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
     }
 
     // --------------------------------------------------
-    // Ledger
+    // Ledger (Claim Blocks)
     // --------------------------------------------------
 
     private void showLedger(Player p) {
         ClaimBlockManager mgr = plugin.getClaimBlockManager();
+        if (mgr == null) {
+            sendKey(p, "claim_blocks_disabled", "&cClaim Blocks are disabled on this server.");
+            return;
+        }
+
         long total = mgr.getTotalBlocks(p.getUniqueId());
         long used = mgr.getUsedBlocks(p.getUniqueId());
         long avail = mgr.getAvailableBlocks(p.getUniqueId());
 
         sendMsg(p, "&8&m------------------------");
-        sendMsg(p, "&6&lLand Ledger &7(" + p.getName() + ")");
-        sendMsg(p, "&7Total Capacity: &e" + total);
-        sendMsg(p, "&7Used Land: &c" + used);
-        sendMsg(p, "&7Available: &a" + avail);
+        sendKey(p, "blocks_ledger_title", "&6&lLand Ledger &7({PLAYER})",
+                Map.of("PLAYER", p.getName()));
+        sendKey(p, "blocks_ledger_total", "&7Total Capacity: &e{TOTAL}",
+                Map.of("TOTAL", String.valueOf(total)));
+        sendKey(p, "blocks_ledger_used", "&7Used Land: &c{USED}",
+                Map.of("USED", String.valueOf(used)));
+        sendKey(p, "blocks_ledger_available", "&7Available: &a{AVAILABLE}",
+                Map.of("AVAILABLE", String.valueOf(avail)));
         sendMsg(p, "&8&m------------------------");
     }
+
+    // --------------------------------------------------
+    // Rename / Description
+    // --------------------------------------------------
 
     private void handleRename(Player p, String[] args) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside your claim to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You are not standing inside your claim.");
             return;
         }
         if (!plot.getOwner().equals(p.getUniqueId()) && !plugin.isAdmin(p)) {
-            sendKey(p, "no_perm", "&cYou lack permission to manage this plot.");
+            sendKey(p, "no_perm", "&cError: You do not have permission for this.");
             return;
         }
         if (args.length < 2) {
-            sendMsg(p, "&cUsage: /ag rename <Name>");
+            sendKey(p, "usage_rename", "&cUsage: /ag rename <Name>");
             return;
         }
+
         String name = Arrays.stream(args).skip(1).collect(Collectors.joining(" "));
         name = ChatColor.translateAlternateColorCodes('&', name);
+
         if (name.length() > 32) {
-            sendMsg(p, "&cName is too long (Max 32 chars).");
+            sendKey(p, "rename_too_long", "&cName is too long (Max {MAX} chars).",
+                    Map.of("MAX", "32"));
             return;
         }
+
         plot.setEntryTitle(name);
 
-        // ✅ Persist immediately (prevents loss on crash/restart)
         plugin.store().savePlot(plot);
         plugin.store().setDirty(true);
 
-        sendMsg(p, "&a✔ Plot renamed to: &r" + name);
+        sendKey(p, "plot_renamed", "&a✔ Plot renamed to: &r{NAME}",
+                Map.of("NAME", name));
         plugin.effects().playConfirm(p);
     }
 
     private void handleSetDesc(Player p, String[] args) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside your claim to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You are not standing inside your claim.");
             return;
         }
         if (!plot.getOwner().equals(p.getUniqueId()) && !plugin.isAdmin(p)) {
-            sendKey(p, "no_perm", "&cYou lack permission to manage this plot.");
+            sendKey(p, "no_perm", "&cError: You do not have permission for this.");
             return;
         }
         if (args.length < 2) {
-            sendMsg(p, "&cUsage: /ag setdesc <Description>");
+            sendKey(p, "usage_setdesc", "&cUsage: /ag setdesc <Description>");
             return;
         }
+
         String desc = Arrays.stream(args).skip(1).collect(Collectors.joining(" "));
         desc = ChatColor.translateAlternateColorCodes('&', desc);
+
         plot.setDescription(desc);
 
-        // ✅ Persist immediately
         plugin.store().savePlot(plot);
         plugin.store().setDirty(true);
 
-        sendMsg(p, "&a✔ Plot description updated.");
+        sendKey(p, "plot_desc_updated", "&a✔ Plot description updated.");
         plugin.effects().playConfirm(p);
     }
+
+    // --------------------------------------------------
+    // Stuck
+    // --------------------------------------------------
 
     private void handleStuck(Player p) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null) {
-            sendMsg(p, "&cYou are not inside a plot.");
+            sendKey(p, "unstuck_not_in_plot", "&cYou are not inside a plot.");
             return;
         }
+
         Location loc = p.getLocation();
         int x = loc.getBlockX();
         int z = loc.getBlockZ();
+
         int dX1 = Math.abs(x - plot.getX1());
         int dX2 = Math.abs(x - plot.getX2());
         int dZ1 = Math.abs(z - plot.getZ1());
         int dZ2 = Math.abs(z - plot.getZ2());
+
         int min = Math.min(Math.min(dX1, dX2), Math.min(dZ1, dZ2));
         Location target = loc.clone();
+
         if (min == dX1) target.setX(plot.getX1() - 2);
         else if (min == dX2) target.setX(plot.getX2() + 2);
         else if (min == dZ1) target.setZ(plot.getZ1() - 2);
         else target.setZ(plot.getZ2() + 2);
+
         World world = loc.getWorld();
         int safeY = world.getHighestBlockYAt(target);
         target.setY(safeY + 1);
+
         TeleportUtil.safeTeleport(plugin, p, target);
-        sendMsg(p, "&e✨ You have been moved to safety.");
+
+        sendKey(p, "unstuck_success", "&a✔ Teleported to safety.");
         plugin.effects().playTeleport(p);
     }
 
+    // --------------------------------------------------
+    // Resize
+    // --------------------------------------------------
+
     private void handleResize(Player p, String[] args) {
         if (args.length < 3) {
-            sendMsg(p, "&cUsage: /aegis resize <direction> <amount>");
-            sendMsg(p, "&eDirections: &f" + String.join(", ", RESIZE_DIRECTIONS));
+            sendKey(p, "resize_usage", "&cUsage: /aegis resize <direction> <amount>");
+            sendKey(p, "resize_directions", "&eDirections: &f{DIRS}",
+                    Map.of("DIRS", String.join(", ", RESIZE_DIRECTIONS)));
             return;
         }
-        String direction = args[1].toLowerCase();
+
+        String direction = args[1].toLowerCase(Locale.ROOT);
+
         int amount;
         try {
             amount = Integer.parseInt(args[2]);
         } catch (NumberFormatException e) {
-            sendMsg(p, "&cAmount must be a number.");
+            sendKey(p, "amount_must_number", "&cAmount must be a number.");
             return;
         }
+
         if (amount <= 0) {
-            sendMsg(p, "&cAmount must be positive.");
+            sendKey(p, "amount_must_positive", "&cAmount must be positive.");
             return;
         }
+
         if (!Arrays.asList(RESIZE_DIRECTIONS).contains(direction)) {
-            sendMsg(p, "&cInvalid direction. Use: &f" + String.join(", ", RESIZE_DIRECTIONS));
+            sendKey(p, "invalid_direction", "&cInvalid direction. Use: &f{DIRS}",
+                    Map.of("DIRS", String.join(", ", RESIZE_DIRECTIONS)));
             return;
         }
 
         plugin.selection().resizePlot(p, direction, amount);
     }
 
+    // --------------------------------------------------
+    // Kick / Ban / Unban
+    // --------------------------------------------------
+
     private void handleKick(Player p, String[] args) {
         if (args.length < 2) {
-            sendMsg(p, "&cUsage: /ag kick <player>");
+            sendKey(p, "kick_usage", "&cUsage: /ag kick <player>");
             return;
         }
+
         Plot kPlot = plugin.store().getPlotAt(p.getLocation());
         if (kPlot == null) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside your claim to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You are not standing inside your claim.");
             return;
         }
         if (!kPlot.getOwner().equals(p.getUniqueId()) && !plugin.isAdmin(p)) {
-            sendKey(p, "no_perm", "&cYou lack permission to manage this plot.");
+            sendKey(p, "no_perm", "&cError: You do not have permission for this.");
             return;
         }
+
         Player kTarget = Bukkit.getPlayer(args[1]);
         if (kTarget == null) {
-            sendMsg(p, "&cPlayer not found.");
+            sendKey(p, "player_not_found", "&cPlayer not found.");
             return;
         }
         if (!kPlot.isInside(kTarget.getLocation())) {
-            sendMsg(p, "&cPlayer is not in your plot.");
+            sendKey(p, "player_not_in_plot", "&cPlayer is not in your plot.");
             return;
         }
         if (kTarget.hasPermission("aegis.admin.bypass") || kTarget.isOp()) {
-            sendMsg(p, "&cYou cannot kick a Server Operator.");
+            sendKey(p, "cannot_kick_operator", "&cYou cannot kick a Server Operator.");
             return;
         }
+
         Location spawn = kTarget.getWorld().getSpawnLocation();
         TeleportUtil.safeTeleport(plugin, kTarget, spawn);
-        kTarget.sendMessage("§cYou were kicked from " + kPlot.getOwnerName() + "'s plot.");
-        sendMsg(p, "&eKicked " + kTarget.getName());
+
+        // Target gets message in THEIR language.
+        sendKey(kTarget, "kicked_target", "§cYou were kicked from {OWNER}'s plot.",
+                Map.of("OWNER", kPlot.getOwnerName()));
+
+        // Sender gets message in THEIR language.
+        sendKey(p, "kicked_sender", "&eKicked {PLAYER}",
+                Map.of("PLAYER", kTarget.getName()));
     }
 
     private void handleBan(Player p, String[] args) {
         if (args.length < 2) {
-            sendMsg(p, "&cUsage: /ag ban <player>");
+            sendKey(p, "ban_usage", "&cUsage: /ag ban <player>");
             return;
         }
+
         Plot bPlot = plugin.store().getPlotAt(p.getLocation());
         if (bPlot == null || !bPlot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
+
         OfflinePlayer bTarget = Bukkit.getOfflinePlayer(args[1]);
-        if (bTarget.getUniqueId().equals(p.getUniqueId())) {
-            sendMsg(p, "&cCannot ban yourself.");
+        if (bTarget.getUniqueId() != null && bTarget.getUniqueId().equals(p.getUniqueId())) {
+            sendKey(p, "ban_self_error", "&cCannot ban yourself.");
             return;
         }
+
         bPlot.addBan(bTarget.getUniqueId());
 
-        // ✅ Persist immediately
         plugin.store().savePlot(bPlot);
         plugin.store().setDirty(true);
 
-        sendMsg(p, "&cBanned " + bTarget.getName());
-        if (bTarget.isOnline() && bPlot.isInside(bTarget.getPlayer().getLocation())) {
+        sendKey(p, "ban_success", "&cBanned {PLAYER}",
+                Map.of("PLAYER", (bTarget.getName() == null ? args[1] : bTarget.getName())));
+
+        if (bTarget.isOnline()) {
             Player online = bTarget.getPlayer();
-            if (online != null) {
+            if (online != null && bPlot.isInside(online.getLocation())) {
                 Location spawn = online.getWorld().getSpawnLocation();
                 TeleportUtil.safeTeleport(plugin, online, spawn);
-                online.sendMessage("§4You have been BANNED from this plot.");
+
+                // Target gets message in THEIR language.
+                sendKey(online, "ban_target", "§4You have been BANNED from this plot.");
             }
         }
     }
 
     private void handleUnban(Player p, String[] args) {
         if (args.length < 2) {
-            sendMsg(p, "&cUsage: /ag unban <player>");
+            sendKey(p, "unban_usage", "&cUsage: /ag unban <player>");
             return;
         }
+
         Plot uPlot = plugin.store().getPlotAt(p.getLocation());
         if (uPlot == null || !uPlot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
+
         OfflinePlayer uTarget = Bukkit.getOfflinePlayer(args[1]);
         uPlot.removeBan(uTarget.getUniqueId());
 
-        // ✅ Persist immediately
         plugin.store().savePlot(uPlot);
         plugin.store().setDirty(true);
 
-        sendMsg(p, "&aUnbanned " + uTarget.getName());
+        sendKey(p, "unban_success", "&aUnbanned {PLAYER}",
+                Map.of("PLAYER", (uTarget.getName() == null ? args[1] : uTarget.getName())));
     }
+
+    // --------------------------------------------------
+    // Home / Spawn
+    // --------------------------------------------------
 
     private void handleSetSpawn(Player p) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null || !plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             plugin.effects().playError(p);
             return;
         }
         if (!plot.isInside(p.getLocation())) {
-            sendKey(p, "home-fail-outside", "&cYour home must be inside your claim.");
+            sendKey(p, "home-fail-outside", "&c❌ You must be inside your claim to set its home.");
             plugin.effects().playError(p);
             return;
         }
+
         plot.setSpawnLocation(p.getLocation());
 
-        // ✅ Persist immediately
         plugin.store().savePlot(plot);
         plugin.store().setDirty(true);
 
-        sendKey(p, "home-set-success", "&aHome position set for this claim.");
+        sendKey(p, "home-set-success", "&a✔ Claim home set to your current location.");
         plugin.effects().playConfirm(p);
     }
 
     private void handleHome(Player p) {
         if (!plugin.cfg().allowHomeTeleport()) {
-            sendMsg(p, "&cHome teleport is disabled.");
+            sendKey(p, "home_teleport_disabled", "&cHome teleport is disabled.");
             return;
         }
+
         Plot homePlot = plugin.store().getPlotAt(p.getLocation());
         if (homePlot == null || !homePlot.getOwner().equals(p.getUniqueId())) {
             List<Plot> plots = plugin.store().getPlots(p.getUniqueId());
             if (plots != null && !plots.isEmpty()) homePlot = plots.get(0);
             else {
-                sendKey(p, "no_plot_here", "&cYou do not own any plots.");
+                sendKey(p, "no_plot_here", "&c❌ You do not own any plots.");
                 plugin.effects().playError(p);
                 return;
             }
         }
+
         if (homePlot.getSpawnLocation() == null) {
-            sendKey(p, "home-fail-no-spawn", "&cNo home location has been set for this claim.");
+            sendKey(p, "home-fail-no-spawn", "&c❌ No home set! Use /ag setspawn.");
             plugin.effects().playError(p);
             return;
         }
+
         TeleportUtil.safeTeleport(plugin, p, homePlot.getSpawnLocation());
         plugin.effects().playConfirm(p);
     }
@@ -651,21 +675,19 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
     private void handleWelcomeFarewell(Player p, String[] args, boolean isWelcome) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null || !plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
 
-        // Clear if no message text provided
         if (args.length < 2) {
             if (isWelcome) plot.setWelcomeMessage(null);
             else plot.setFarewellMessage(null);
 
-            // ✅ Persist immediately (this is the big fix)
             plugin.store().savePlot(plot);
             plugin.store().setDirty(true);
 
-            if (isWelcome) sendKey(p, "welcome-cleared", "&eWelcome message cleared.");
-            else sendKey(p, "farewell-cleared", "&eFarewell message cleared.");
+            if (isWelcome) sendKey(p, "welcome-cleared", "&e✔ Welcome message cleared.");
+            else sendKey(p, "farewell-cleared", "&e✔ Farewell message cleared.");
             return;
         }
 
@@ -673,109 +695,140 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
         if (isWelcome) plot.setWelcomeMessage(msg);
         else plot.setFarewellMessage(msg);
 
-        // ✅ Persist immediately (prevents loss on crash/restart)
         plugin.store().savePlot(plot);
         plugin.store().setDirty(true);
 
-        if (isWelcome) sendKey(p, "welcome-set", "&aWelcome message set.");
-        else sendKey(p, "farewell-set", "&aFarewell message set.");
+        if (isWelcome) sendKey(p, "welcome-set", "&a✔ Welcome message updated.");
+        else sendKey(p, "farewell-set", "&a✔ Farewell message updated.");
     }
+
+    // --------------------------------------------------
+    // Market
+    // --------------------------------------------------
 
     private void handleSell(Player p, String[] args) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null || !plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
         if (args.length < 2) {
-            sendMsg(p, "&cUsage: /ag sell <price>");
+            sendKey(p, "sell_usage", "&cUsage: /ag sell <price>");
             return;
         }
+
         try {
             double price = Double.parseDouble(args[1]);
             if (price <= 0) {
-                sendMsg(p, "&cPrice must be positive.");
+                sendKey(p, "price_must_positive", "&cPrice must be positive.");
                 return;
             }
+
             plot.setForSale(true, price);
 
-            // ✅ Persist immediately
             plugin.store().savePlot(plot);
             plugin.store().setDirty(true);
 
             String formatted = plugin.eco().format(price, com.aegisguard.economy.CurrencyType.VAULT);
-            String msg = tr(p, "market-for-sale", "&aPlot listed for &e{PRICE}&a.").replace("{PRICE}", formatted);
-            sendMsg(p, msg);
+
+            sendKey(p, "market-for-sale", "&a✔ Claim listed for &6{PRICE}&a.",
+                    Map.of("PRICE", formatted));
+
         } catch (NumberFormatException e) {
-            sendMsg(p, "&cInvalid number.");
+            sendKey(p, "invalid_number", "&cInvalid number.");
         }
     }
 
     private void handleUnsell(Player p) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null || !plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
+
         plot.setForSale(false, 0);
 
-        // ✅ Persist immediately
         plugin.store().savePlot(plot);
         plugin.store().setDirty(true);
 
-        sendKey(p, "market-not-for-sale", "&eThis plot is no longer listed for sale.");
+        sendKey(p, "market-not-for-sale", "&e✔ Claim listing removed.");
     }
+
+    // --------------------------------------------------
+    // Menus
+    // --------------------------------------------------
 
     private void openLevelMenu(Player p) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null || !plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
+
         if (plugin.cfg().isLevelingEnabled()) plugin.gui().leveling().open(p, plot);
-        else sendMsg(p, "&cLeveling is disabled.");
+        else sendKey(p, "leveling_disabled", "&cLeveling is disabled.");
     }
 
     private void openZoneMenu(Player p) {
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null || !plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot you own to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You must be standing inside a plot you own to do that.");
             return;
         }
+
         if (plugin.cfg().isZoningEnabled()) plugin.gui().zoning().open(p, plot);
-        else sendMsg(p, "&cZoning is disabled.");
+        else sendKey(p, "zoning_disabled", "&cZoning is disabled.");
     }
 
     private void handleLike(Player p) {
         if (!plugin.cfg().isLikesEnabled()) {
-            sendKey(p, "like_disabled", "&cLikes are currently disabled on this server.");
+            sendKey(p, "like_disabled", "&cLikes are disabled on this server/world.");
             return;
         }
+
         Plot plot = plugin.store().getPlotAt(p.getLocation());
         if (plot == null) {
-            sendKey(p, "no_plot_here", "&cYou must be standing inside a plot to do that.");
+            sendKey(p, "no_plot_here", "&c❌ You are not standing inside your claim.");
             return;
         }
         if (plot.getOwner().equals(p.getUniqueId())) {
-            sendKey(p, "like_own_plot", "&cYou cannot like your own plot.");
+            sendKey(p, "like_own_plot", "&cError: You cannot like your own claim.");
             return;
         }
 
         if (plugin.cfg().oneLikePerPlayer() && plot.hasLiked(p.getUniqueId())) {
             plot.toggleLike(p.getUniqueId());
-            sendKey(p, "like_removed", "&eYour like has been removed from this plot.");
+            sendKey(p, "like_removed", "&eYour like has been removed.");
         } else {
             plot.toggleLike(p.getUniqueId());
-            String amount = String.valueOf(plot.getLikes());
-            String msg = tr(p, "like_success", "&aYou liked this plot. &f({AMOUNT} total likes)").replace("{AMOUNT}", amount);
-            sendMsg(p, msg);
+            sendKey(p, "like_success", "&a✔ You liked this claim. Total likes: &e{AMOUNT}",
+                    Map.of("AMOUNT", String.valueOf(plot.getLikes())));
             plugin.effects().playConfirm(p);
         }
 
-        // ✅ Persist immediately
         plugin.store().savePlot(plot);
         plugin.store().setDirty(true);
     }
+
+    // --------------------------------------------------
+    // Help
+    // --------------------------------------------------
+
+    private void sendHelp(Player player) {
+        sendKey(player, "help_header", "&bAegisGuard Help");
+        List<String> helpLines = Collections.emptyList();
+        try {
+            if (plugin.codex() != null) helpLines = plugin.codex().trList(player, "help_lines");
+        } catch (Throwable ignored) {}
+
+        if (helpLines != null) {
+            for (String line : helpLines) sendMsg(player, line);
+        }
+    }
+
+    // --------------------------------------------------
+    // Tab completion
+    // --------------------------------------------------
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
@@ -793,48 +846,48 @@ public class AegisCommand implements CommandExecutor, TabCompleter {
         return null;
     }
 
-    private ItemStack createScepter() {
+    // --------------------------------------------------
+    // Wand item (localized)
+    // --------------------------------------------------
+
+    private ItemStack createScepter(Player p) {
         ItemStack rod = new ItemStack(Material.LIGHTNING_ROD);
         ItemMeta meta = rod.getItemMeta();
+
         if (meta != null) {
-            meta.setDisplayName(ChatColor.translateAlternateColorCodes('&', "&bAegis Scepter"));
-            meta.setLore(Arrays.asList(ChatColor.translateAlternateColorCodes('&', "&7Left/Right-click: Select corners")));
+            String name = tr(p, "wand_item_name", "&bAegis Scepter");
+            List<String> lore = Collections.emptyList();
+            try {
+                if (plugin.codex() != null) lore = plugin.codex().trList(p, "wand_item_lore");
+            } catch (Throwable ignored) {}
+
+            if (lore == null || lore.isEmpty()) {
+                lore = Arrays.asList("&7Left/Right-click: Select corners");
+            }
+
+            meta.setDisplayName(ChatColor.translateAlternateColorCodes('&', name));
+            meta.setLore(lore.stream()
+                    .map(s -> ChatColor.translateAlternateColorCodes('&', s))
+                    .collect(Collectors.toList()));
+
             meta.addItemFlags(ItemFlag.HIDE_ENCHANTS, ItemFlag.HIDE_ATTRIBUTES);
+
             meta.getPersistentDataContainer().set(
                     SelectionService.WAND_KEY,
                     PersistentDataType.BYTE,
                     (byte) 1
             );
+
             NamespacedKey idKey = new NamespacedKey(plugin, "wand_id");
             meta.getPersistentDataContainer().set(
                     idKey,
                     PersistentDataType.STRING,
                     UUID.randomUUID().toString()
             );
+
             rod.setItemMeta(meta);
         }
+
         return rod;
-    }
-
-    private void sendHelp(Player player) {
-        String header = tr(player, "help_header", "&bAegisGuard &7Commands:");
-        sendMsg(player, header);
-        List<String> helpLines = null;
-        try {
-            if (plugin.codex() != null) helpLines = plugin.codex().trList(player, "help_lines");
-        } catch (Throwable ignored) {}
-        if (helpLines == null || helpLines.isEmpty()) {
-            try {
-                helpLines = plugin.msg().getList(player, "help_lines");
-            } catch (Throwable ignored) {}
-        }
-        if (helpLines != null) {
-            for (String line : helpLines) sendMsg(player, line);
-        }
-    }
-
-    private void sendMsg(CommandSender sender, String message) {
-        if (message == null || message.isEmpty()) return;
-        sender.sendMessage(ChatColor.translateAlternateColorCodes('&', message));
     }
 }
